# homeworks_of_course_7

./: .env_example  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
fixtures/: course.json  lesson.json  payment.json  user.json
lms/: admin.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_alter_subscription_course_alter_subscription_user.py  0006_subscription_sign_of_subscription.py  0007_course_last_update_date.py  0008_remove_subscription_sign_of_subscription.py  0009_subscription_sign_of_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options.py  0004_alter_payments_options.py  0005_payments_payment_link_payments_session_id.py  0006_alter_user_last_login.py  0007_alter_user_last_login.py
